--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <p class="banner-details text-light-gray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
                 <button class="btn-primary">Explore More</button>
             </div>
-            <img class="banner-img" src="/images/banner.png" alt="">
+            <img class="banner-img" src="images/banner.png" alt="">
         </div>
     </header>
 
